# saxon_toolchain

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  defs.bzl  providers.bzl  xml_rules.bzl  xslt_rules.bzl
tests/: BUILD.bazel
tests/fixtures/: expected.xml  greeting.xsd  identity-ish.xsl  input.xml  message-to-greeting.xsl  messages.xml  messages.xsd
tests/rules/: BUILD.bazel  saxon_transform_test.bzl  toolchain_test.bzl
tests/scripts/: assert_exists.py  assert_file_equals.py  assert_saxon_cli.py
toolchain/: BUILD.bazel  defs.bzl
