load(":defs.bzl", "saxon_he_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

saxon_he_toolchain(
    name = "saxon_he_toolchain_impl",
)

toolchain(
    name = "saxon_he_toolchain",
    toolchain = ":saxon_he_toolchain_impl",
    toolchain_type = ":toolchain_type",
)
