load(":defs.bzl", "saxon_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

saxon_toolchain(
    name = "saxon_toolchain_impl",
)

toolchain(
    name = "saxon_toolchain",
    toolchain = ":saxon_toolchain_impl",
    toolchain_type = ":toolchain_type",
)
